--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.6",
     "@types/react": "^18.0.26",
@@ -13,13 +11,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.3",
+    "typescript": "5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest run --silent --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +36,37 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/lodash-es": "4",
+    "@vitest/coverage-v8": "3.2.4",
+    "antd": "5",
+    "autoprefixer": "10",
+    "axios": "1",
+    "dayjs": "1",
+    "dompurify": "^3.2.6",
+    "emittery": "^1.2.0",
+    "happy-dom": "^18.0.1",
+    "jsdom": "^26.1.0",
+    "lodash-es": "4",
+    "msw": "2",
+    "nanoid": "5",
+    "postcss": "8",
+    "react-router": "7",
+    "tailwind-merge": "3",
+    "vitest": "^3.2.4",
+    "vitest-preview": "^0.0.1"
+  },
+  "resolutions": {
+    "jsdom": "26"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
