--- a/package.json
+++ b/package.json
@@ -3,15 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "6",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "14",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.6",
+    "@types/lodash-es": "4",
+    "@types/node": "24",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@vitest/coverage-v8": "3",
+    "antd": "5",
+    "autoprefixer": "10",
+    "axios": "1",
+    "dayjs": "1",
+    "emittery": "1",
+    "happy-dom": "18",
+    "lodash-es": "4",
+    "msw": "2",
+    "nanoid": "5",
+    "postcss": "8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "7",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "3",
+    "tailwindcss": "3",
     "typescript": "5",
+    "vitest": "3",
+    "vitest-preview": "0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,29 +57,13 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@ant-design/icons": "6",
-    "@testing-library/user-event": "14",
-    "@types/lodash-es": "4",
-    "@vitest/coverage-v8": "3",
-    "antd": "5",
-    "autoprefixer": "10",
-    "axios": "1",
-    "dayjs": "1",
-    "emittery": "1",
-    "happy-dom": "18",
-    "lodash-es": "4",
-    "msw": "2",
-    "nanoid": "5",
-    "postcss": "8",
-    "react-router": "7",
-    "tailwind-merge": "3",
-    "vitest": "3",
-    "vitest-preview": "0"
-  },
   "volta": {
     "node": "24.1.0",
     "yarn": "1.22.22"
+  },
+  "overrides": {
+    "typescript": "5",
+    "tailwindcss": "3"
   },
   "msw": {
     "workerDirectory": [
